--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,9 @@
     "socket.io": "^4.8.3",
     "zod": "^4.3.6"
   },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
