--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.13.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.563.0",
     "react": "^19.2.4",
     "react-brackets": "^0.4.7",
@@ -31,6 +32,7 @@
     "react-hook-form": "^7.71.1",
     "react-router-dom": "^7.13.0",
     "socket.io-client": "^4.8.3",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.3.6"
   },
