--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -4,7 +4,7 @@ services:
   db:
     image: postgres:16-alpine
     ports:
-      - "5432:5432"
+      - '5432:5432'
     environment:
       - POSTGRES_DB=scoretracker
       - POSTGRES_USER=postgres
@@ -12,7 +12,7 @@ services:
     volumes:
       - postgres_data_dev:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres -d scoretracker"]
+      test: ['CMD-SHELL', 'pg_isready -U postgres -d scoretracker']
       interval: 10s
       timeout: 5s
       retries: 5
