--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "scoretracker",
   "version": "1.0.0",
+  "type": "module",
   "description": "Tournament score tracking app with real-time updates",
   "private": true,
   "scripts": {
@@ -23,9 +24,35 @@
     "docker:dev:down": "docker-compose -f docker-compose.dev.yml down",
     "docker:build": "docker-compose build",
     "docker:up": "docker-compose up -d",
-    "docker:down": "docker-compose down"
+    "docker:down": "docker-compose down",
+    "prepare": "husky",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "test": "npm run test:client && npm run test:server && npm run test:shared",
+    "test:client": "cd client && npm test",
+    "test:server": "cd server && npm test",
+    "test:shared": "cd shared && npm test"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "prettier --write"
+    ],
+    "*.{json,md,css,html}": [
+      "prettier --write"
+    ]
   },
   "devDependencies": {
-    "concurrently": "^9.1.2"
+    "@eslint/js": "^9.39.1",
+    "@tanstack/eslint-plugin-query": "^5.91.3",
+    "concurrently": "^9.1.2",
+    "eslint": "^9.39.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.26",
+    "globals": "^16.5.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.7",
+    "prettier": "^3.8.1",
+    "typescript-eslint": "^8.46.4"
   }
 }
